syntax = "proto3";

package election;

option go_package = "internal/election";

// The service definition.
service LeaderElection {
  rpc RequestVote(VoteRequest) returns (VoteResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}
// The message definitions.
message VoteRequest {
  string candidate_id = 1;
  int32 term = 2;
  string token = 3;
  int32 last_log_index = 4;
  int32 last_log_term = 5;
}

message VoteResponse {
  bool vote_granted = 1;
  int32 term = 2;
}

message HeartbeatRequest {
  string leader_id = 1;
  int32 term = 2;
  string token = 3;
}

message HeartbeatResponse {
  bool success = 1;
  int32 term = 2;
}
